--- a/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
@@ -13,7 +13,8 @@ main{
   
   /*---------Top-banner-------*/
 .advent-announce.push{
-  background: #4F698E;
+  background: linear-gradient(270deg, #FF8D5C 19.21%, #FFB979 95.78%);
+  box-shadow: 0px 1px 1px rgba(140, 57, 15, 0.7);
   /* background-image: url(../images/top_banner/onlyoffice_7.0/desktop_left.svg), url(../images/top_banner/onlyoffice_7.0/desktop_right.svg);
   background-position: calc(50% - 456px) 0, calc(50% + 428px) 0; */
   background-repeat: no-repeat;
@@ -21,51 +22,79 @@ main{
   text-align: center;
   position: relative;
   width: 100%;
+  height: 56px;
   cursor: pointer;
 }
 .advent-announce.push a{
+  position: relative;
   text-decoration: none;
   display: block;
 }
   
-.advent-announce.push .advent-announce-text{
+.advent-announce.push .advent-announce-text > div{
+  position: relative;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 56px;
   color: #FFFFFF;
   text-align: center;
   margin: 0 auto;
-  font-weight: 600;
-  font-size: 15px;
-  line-height: 22px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 19px;
   text-decoration: none !important;
-  letter-spacing: -0.01em;
-  padding: 7px 0px 9px;
+  letter-spacing: 0.01em;
+  padding: 11px 0px 13px;
   white-space: nowrap;
-  position: relative;
-  display: inline-block;
-  box-sizing: content-box;
+  z-index: 10;
 }
+
+.advent-announce.push .advent-announce-text > div:before{
+  content: '';
+  background-image: url(../images/top_banner/onlyoffice_docs_cloud/icon-1.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 49px;
+  height: 25px;
+}
+
+.advent-announce.push .advent-announce-text > div:after{
+  content: '';
+  background-image: url(../images/top_banner/onlyoffice_docs_cloud/icon-2.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  margin-left: 10px;
+  width: 20px;
+  height: 20px;
+}
+
 .advent-announce.push .advent-announce-text:before{
   content: '';
-  background-image: url(../images/top_banner/onlyoffice_7.2/update_icon7_2.svg), url(../images/top_banner/onlyoffice_7.2/desk_left.svg);
-  background-position: 228px 0, 0 12px;
+  background-image: url(../images/top_banner/onlyoffice_docs_cloud/desktop-left.svg);
+  background-position: center;
   background-repeat: no-repeat;
   position: absolute;
   height: 56px;
-  width: 475px;
-  left: -315px;
+  width: 331px;
+  left: 34px;
   top: 0;
   box-sizing: content-box;
 }
 
 .advent-announce.push .advent-announce-text:after{
   content: '';
-  background-image: url(../images/top_banner/onlyoffice_7.2/right_arrow.svg), url(../images/top_banner/onlyoffice_7.2/desk_right.svg);
-  background-position: 0 21px, 100% 12px;
+  background-image: url(../images/top_banner/onlyoffice_docs_cloud/desktop-right.svg);
+  background-position: center;
   background-repeat: no-repeat;
   position: absolute;
   height: 56px;
-  width: 240px;
-  right: -260px;
-  top: 0px;
+  width: 359px;
+  right: 37px;
+  top: 0;
 }
 
 .advent-announce.push .advent-announce-text b{
