--- a/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
@@ -505,7 +505,7 @@ margin: 16px auto;
   border-radius: 5px;
   box-sizing: border-box;
   margin-bottom: 36px;
-  padding: 24px;
+  padding: 23px;
   background-color: #F9F9F9;
 }
 .widget:last-child{
@@ -565,6 +565,10 @@ margin: 16px auto;
   gap: 24px;
   list-style: none;
 }
+.category-topics ul li{
+  display: flex;
+  overflow: hidden;
+}
 .category-topics a{
   display: inline-block;
   padding-left: 36px;
@@ -576,6 +580,9 @@ margin: 16px auto;
   background-repeat: no-repeat;
   background-size: 24px 24px;
   background-position-x: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   transition: color 0.3s;
 }
 .category-topics a:hover{
@@ -599,7 +606,10 @@ margin: 16px auto;
   color: #444444;
   font-weight: 400;
   text-decoration: none;
-  display: block;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 .in_the_press_entries li a:hover{
   text-decoration:underline;
@@ -607,7 +617,7 @@ margin: 16px auto;
 
 .press{
   margin-top: 8px;
-  margin-bottom: 28px;
+  margin-bottom: 24px;
 }
 .press-all{
   display: flex;
@@ -624,7 +634,7 @@ margin: 16px auto;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
-  line-height: 19px;
+  line-height: 26px;
   text-align: right;
   text-decoration: none;
   color: #444444 !important;
@@ -867,13 +877,21 @@ margin: 16px auto;
   height: 1000px;
 }
 
+.post {
+  background-color: #ffffff;
+  height: 100%;
+}
+
 .post .post-content {
   padding: 32px 24px 33px;
-  background-color: #FFFFFF;
 }
 
 .post .post-content p {
-  margin: 16px 0 0;
+  margin: 13px 0 0;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 .post h2.entry-title{
@@ -891,6 +909,10 @@ margin: 16px auto;
   font-size: 24px;
   line-height: 32px;
   text-decoration: none;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 .post h2.entry-title a:hover{
@@ -941,6 +963,9 @@ margin: 16px auto;
 .head,
 .grid{
   margin-top: 16px;
+}
+#content .post .head, .grid {
+  margin-top: 14px;
 }
 .date {
   padding-left: 20px;
@@ -1001,7 +1026,7 @@ margin: 16px auto;
 }
 .wrapperTitle a{
   font-size: 14px;
-  line-height: 19px;
+  line-height: 16px;
   text-decoration-line: underline;
   color: #333333;
 }
