fix: fix styles for main post

--- a/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
@@ -431,6 +431,9 @@ main{
   margin-bottom: 60px;
   grid-gap: 32px;
 }
+#content .content {
+  max-width: 736px;
+}
 .postwrapper > a{
   position: relative;
   display: block;
