--- a/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
@@ -324,13 +324,13 @@ main{
   box-sizing: border-box;
   background-color: #fff;
   background: url('../images/search.svg') no-repeat;
-  background-position: right 8px center;
+  background-position: right 13px center;
   background-repeat: no-repeat;
   background-size: 18px 20px;
   cursor: text;
   height: 40px;
-  width: 241px;
-  padding: 0 33px 0 16px;
+  width: 221px;
+  padding: 9px 40px 9px 16px;
   -webkit-transition: width 100ms ease, background 100ms ease;
   transition: width 100ms ease, background 100ms ease;
   border: 1px solid #E0E0E0;
@@ -730,40 +730,52 @@ margin: 16px auto;
   margin-bottom: 30px;
 }
 /*---------WIDGET SOCIAL-ICONS IN THE PRESS-------*/
-.icons-item {
+.widget .social-icons-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 30px);
+  gap: 16px 24px;
+}
+.icons-item a {
   display: inline-block;
-  background-position: 50% 50%;
-  background-size: cover;
   background-repeat: no-repeat;
-}
-.wdgt-facebook,
-.wdgt-twitter,
-.wdgt-vk,
-.wdgt-instagram{
-  display: block;
-  margin-right: 24px;
-}
-
-.wdgt-facebook{
-  width: 14px;
-  height: 23px;
-  background-image: url("../images/social-facebook.svg");
-}
-.wdgt-twitter{
-  width: 27px;
-  height: 22px;
-  background-image: url("../images/social-twitter.svg");
-}
-.wdgt-vk{
-  width: 35px;
-  height: 19px;
-  background-image: url("../images/social-VK.svg");
-}
-.wdgt-instagram{
-  width: 25px;
+  background-image: url("../images/color_social_icons.svg");
   height: 24px;
-  background-image: url("../images/social-instagram.svg");
-  margin-right: 0;
+  width: 24px;
+  vertical-align: middle;
+  background-position-y: 0;
+}
+.icons-item .wdgt-subscribe {
+  background-position-x: -434px;
+}
+.icons-item .wdgt-facebook {
+  background-position-x: 0;
+}
+.icons-item .wdgt-twitter {
+  background-position-x: -40px;
+}
+.icons-item .wdgt-linkedin {
+  background-position-x: -80px;
+}
+.icons-item .wdgt-youtube {
+  background-position-x: -120px;
+}
+.icons-item .wdgt-blog {
+  background-position-x: -200px;
+}
+.icons-item .wdgt-medium {
+  background-position-x: -240px;
+}
+.icons-item .wdgt-instagram {
+  background-position-x: -280px;
+}
+.icons-item .wdgt-github {
+  background-position-x: -320px;
+}
+.icons-item .wdgt-fosstodon {
+  background-position-x: -397px;
+}
+.icons-item .wdgt-tiktok {
+  background-image: url("../images/social-tiktok.svg");
 }
 
 /*---------PAGE ONLYOFFICE IN THE PRESS-------*/
@@ -1241,15 +1253,18 @@ margin: 16px auto;
   padding: 40px;
   box-sizing: border-box;
   z-index: 1003;
+  width: 100%;
+  max-width: 1120px;
 }
 .popup .subscribe-blue,
 .popup .subscribe-white{
   z-index: 1003;
+  margin: 0;
 }
 .close-popup,
 .close-overlay{
   position: absolute;
-  top: 15px;
+  top: 10px;
   right: 15px;
   width: 23px;
   height: 23px;
