--- a/wp-content/themes/teamlab-blog-2-0/css/common.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/common.css
@@ -1221,6 +1221,9 @@ body.desktop .button.red.disabled:visited {
   .wdgt-instagram {
     margin-right: 24px;
   }
+  .sidebar {
+    margin-top: 48px;
+  }
 }
 
 @media screen and (max-width: 768px){
@@ -1463,8 +1466,10 @@ body.desktop .button.red.disabled:visited {
       font-weight: 600;
       letter-spacing: 0.04em;
   }
+  .widget .social-icons-list {
+    grid-template-columns: repeat(auto-fit, 28px);
+  }
 }
-
 
 @media screen and (max-width: 592px){
   .main_button::after,
@@ -1624,9 +1629,6 @@ body.desktop .button.red.disabled:visited {
   }
   .category-topics{
     margin: 32px 16px;
-  }
-  .sidebar {
-    margin-top: 48px;
   }
   .recent-posts-block{
     margin-top: 0;
